# remarkable-mcp-redux

./: .gitignore  CLAUDE.md  Justfile  LICENSE  README.md  mcp.example.json  pyproject.toml  remarkable_client.py  server.py
docs/: annotated-pdf-compositing.md  architecture.md  ongoing-mcp-bugs.md  remarkable-mcp-fork-plan.md
remarkable_mcp_redux/: __init__.py  _cache.py  _folders.py  _page_sources.py  _pdf_passthrough.py  _render.py  _tools.py  annotations.py  cache.py  client.py  config.py  exceptions.py  render.py  responses.py  schemas.py  server.py  tools.py  writes.py
remarkable_mcp_redux/core/: __init__.py  cache.py  page_sources.py  pdf_passthrough.py  rasterize.py  render.py  rm_format.py  writes.py
remarkable_mcp_redux/facades/: __init__.py  _helpers.py  documents.py  folders.py  render.py  status.py  writes.py
remarkable_mcp_redux/tools/: __init__.py  _artifacts.py  _boundary.py  read.py  render.py  write.py
skills/: remarkable-diagram.md  remarkable-transcribe.md
tests/: __init__.py  conftest.py  test_annotations.py  test_artifacts.py  test_cache.py  test_config.py  test_documents.py  test_e2e.py  test_exceptions.py  test_folders.py  test_pdf_passthrough.py  test_rasterize.py  test_remarkable_client.py  test_render.py  test_render_dispatch.py  test_responses.py  test_rm_format.py  test_server.py  test_writes.py
